--- a/Share Beauty App/Base.lproj/LifeStyleFirstDetailViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LifeStyleFirstDetailViewController.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,41 +22,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="cPZ-HZ-YPi">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                <rect key="frame" x="0.0" y="188" width="1024" height="580"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PSx-Hb-PSG">
-                                        <rect key="frame" x="0.0" y="20" width="1024" height="718"/>
+                                        <rect key="frame" x="0.0" y="20" width="1024" height="530"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QMA-MN-KcK">
-                                                <rect key="frame" x="340.5" y="0.0" width="1" height="718"/>
+                                                <rect key="frame" x="340.5" y="0.0" width="1" height="530"/>
                                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="1" id="8be-sg-v2H"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mix-Yb-C3X">
-                                                <rect key="frame" x="682.5" y="0.0" width="1" height="718"/>
+                                                <rect key="frame" x="682.5" y="0.0" width="1" height="530"/>
                                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="1" id="Fce-fN-fxO"/>
                                                 </constraints>
                                             </view>
                                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7eb-17-omv" customClass="LifeStyleProductView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="340.5" height="718"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="340.5" height="530"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isShowAnswerView" value="NO"/>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isShowContentView" value="YES"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOf-Bm-QDE" customClass="LifeStyleProductView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                <rect key="frame" x="341.5" y="0.0" width="341" height="718"/>
+                                                <rect key="frame" x="341.5" y="0.0" width="341" height="530"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isShowAnswerView" value="NO"/>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isShowContentView" value="YES"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="In6-iM-Ya8" customClass="LifeStyleProductView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                <rect key="frame" x="683.5" y="0.0" width="340.5" height="718"/>
+                                                <rect key="frame" x="683.5" y="0.0" width="340.5" height="530"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isShowAnswerView" value="NO"/>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isShowContentView" value="YES"/>
@@ -95,17 +94,27 @@
                                     <constraint firstAttribute="trailing" secondItem="PSx-Hb-PSG" secondAttribute="trailing" id="xgc-49-alw"/>
                                 </constraints>
                             </scrollView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="unn-nd-aGG">
+                                <rect key="frame" x="0.0" y="20" width="1024" height="168"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="168" id="aPu-Dc-rt3"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="cPZ-HZ-YPi" secondAttribute="trailing" id="7Hf-vS-yXc"/>
                             <constraint firstItem="ccM-iA-GLD" firstAttribute="top" secondItem="cPZ-HZ-YPi" secondAttribute="bottom" id="9hR-jY-jLm"/>
-                            <constraint firstItem="cPZ-HZ-YPi" firstAttribute="top" secondItem="nfh-Xa-TPF" secondAttribute="topMargin" id="NYr-TU-jab"/>
+                            <constraint firstItem="unn-nd-aGG" firstAttribute="leading" secondItem="nfh-Xa-TPF" secondAttribute="leading" id="FjV-cI-7Kw"/>
                             <constraint firstItem="cPZ-HZ-YPi" firstAttribute="leading" secondItem="nfh-Xa-TPF" secondAttribute="leading" id="R5P-Bp-fuN"/>
+                            <constraint firstItem="unn-nd-aGG" firstAttribute="top" secondItem="0Dc-Ys-UgS" secondAttribute="bottom" id="VeS-2P-5LE"/>
+                            <constraint firstAttribute="trailing" secondItem="unn-nd-aGG" secondAttribute="trailing" id="XYL-hH-5KD"/>
+                            <constraint firstItem="cPZ-HZ-YPi" firstAttribute="top" secondItem="unn-nd-aGG" secondAttribute="bottom" id="yT4-ay-xaF"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="mScrollV" destination="cPZ-HZ-YPi" id="3GA-bj-pl1"/>
+                        <outlet property="mTopImageView" destination="unn-nd-aGG" id="t7R-ZI-a9P"/>
                         <outlet property="mVContent" destination="PSx-Hb-PSG" id="IFb-5o-aO6"/>
                         <outletCollection property="mLifeStyleProductViews" destination="7eb-17-omv" collectionClass="NSMutableArray" id="NTc-J6-Vna"/>
                         <outletCollection property="mLifeStyleProductViews" destination="AOf-Bm-QDE" collectionClass="NSMutableArray" id="fO8-7N-EEu"/>
@@ -114,7 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3aj-4H-wE9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-7436" y="2246"/>
+            <point key="canvasLocation" x="-7436.1328124999991" y="2245.3125"/>
         </scene>
     </scenes>
 </document>
